gnome-shell (3.27.91-0ubuntu1) UNRELEASED; urgency=medium

  * debian/ubuntu-session-mods/ubuntu.css:
    - adapt to new GNOME Shell theme including OSK.
  * debian/rules:
    - some duplication removal.

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 02 Mar 2018 10:04:06 +0100

gnome-shell (3.26.2-0ubuntu3) bionic; urgency=medium

  * debian/patches/ubuntu_panel_center_date_workarea.patch:
    Align date entry relative to workarea. That way, title bars are
    centered relative to date entry. (LP: #1716432)
  * :
    Don't allow ubuntu mode extension to update
    Ensure that no update is proposed or loaded if sideloaded (always
    prefer system version) on the ubuntu session.
    We want to ensure that the default code running is going through
    our QA and security team process than being loaded from a 3rd
    party website.
    Also, that will enable us to upload newer versions on GNOME
    extension website while still letting older ubuntu release versions
    running expected extension version.
    Note that the patch set is simplified with a hardcoded extension list
    until https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/1 is merged.
    The patch set is too large otherwise to keep it maintainable as a distro
    patch.
    See also https://bugzilla.gnome.org/show_bug.cgi?id=789852.

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 15 Feb 2018 15:25:18 +0100

gnome-shell (3.26.2-0ubuntu2) bionic; urgency=medium

  * No-change rebuild for libical soname change.

 -- Matthias Klose <doko@ubuntu.com>  Sat, 09 Dec 2017 11:41:33 +0000

gnome-shell (3.26.2-0ubuntu1) bionic; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release (LP: #1731053)
  * debian/control.in:
    - Drop redundant Suggests on gir1.2-gdm-1.0
  * Drop patches applied in new release:
    - fix_reset_initial_focus.patch
    - git_layout-unset-when-headless.patch

  [ Didier Roche ]
  * Modify debian/patches/70_allow_sound_above_100.patch: